all_permissions.txt
android.permission.RECEIVE_BOOT_COMPLETED
android.permission.RECEIVE_SMS
android.permission.READ_SMS
android.permission.SEND_SMS
android.permission.READ_PHONE_STATE
android.permission.PROCESS_OUTGOING_CALLS
android.permission.ACCESS_NETWORK_STATE
android.permission.ACCESS_FINE_LOCATION
android.permission.INTERNET
android.permission.RECORD_AUDIO
android.permission.WRITE_EXTERNAL_STORAGE
android.permission.CAMERA
android.permission.CALL_PHONE
android.permission.READ_CONTACTS
android.permission.VIBRATE
android.permission.ACCESS_WIFI_STATE
com.android.launcher.permission.INSTALL_SHORTCUT
android.permission.ACCESS_COARSE_LOCATION
android.permission.CHANGE_WIFI_STATE
android.permission.WAKE_LOCK
android.permission.DISABLE_KEYGUARD
android.permission.SYSTEM_ALERT_WINDOW
android.permission.GET_TASKS
android.permission.READ_LOGS
android.permission.INSTALL_PACKAGES
com.android.launcher.permission.UNINSTALL_SHORTCUT
android.permission.READ_EXTERNAL_STORAGE
android.permission.WRITE_SMS
android.permission.WRITE_SETTINGS
com.android.vending.BILLING
android.permission.ACCESS_SUPERUSER
com.google.android.providers.gsf.permission.READ_GSERVICES
android.permission.PACKAGE_USAGE_STATS
com.android.browser.permission.READ_HISTORY_BOOKMARKS
android.permission.READ_CALL_LOG
android.permission.GET_ACCOUNTS
android.permission.EXPAND_STATUS_BAR
android.permission.MODIFY_AUDIO_SETTINGS
android.permission.RESTART_PACKAGES
android.permission.MOUNT_UNMOUNT_FILESYSTEMS
android.permission.ACCESS_LOCATION_EXTRA_COMMANDS
android.permission.WRITE_APN_SETTINGS
android.permission.CHANGE_NETWORK_STATE
android.permission.DEVICE_POWER
com.android.launcher.permission.READ_SETTINGS
android.permission.WRITE_CONTACTS
android.permission.BLUETOOTH
android.permission.ACCESS_COARSE_UPDATES
android.permission.PEORDER_TASKS
android.permission.BLUETOOTH_ADMIN
android.permission.KILL_BACKGROUND_PROCESSES
android.permission.DELETE_PACKAGES
android.permission.BROADCAST_STICKY
android.permission.MANAGE_ACCOUNTS
android.permission.AUTHENTICATE_ACCOUNTS
android.permission.REORDER_TASKS
com.your.domain.PAYMENT_BROADCAST_PERMISSION
android.permission.MODIFY_PHONE_STATE
android.permission.WRITE_SYNC_SETTINGS
android.permission.READ_SYNC_SETTINGS
android.permission.WRITE_SECURE_SETTINGS
com.android.vending.CHECK_LICENSE
com.android.launcher.permission.WRITE_SETTINGS
android.permission.WRITE_CALL_LOG
com.android.launcher2.permission.INSTALL_SHORTCUT
android.permission.KILL_BACKGROUND_PROCESSE
android.permission.FLASHLIGHT
android.permission.INSTALL_SHORTCUT
android.permission.READ_PROFILE
android.permission.READ_SYNC_STATS
android.permission.STORAGE
android.permission.USE_CREDENTIALS
com.google.android.c2dm.permission.RECEIVE
com.sec.android.provider.badge.permission.READ
com.sec.android.provider.badge.permission.WRITE
com.htc.launcher.permission.READ_SETTINGS
com.htc.launcher.permission.UPDATE_SHORTCUT
com.sonyericsson.home.permission.BROADCAST_BADGE
com.whatsapp.permission.BROADCAST
com.whatsapp.permission.C2D_MESSAGE
com.whatsapp.permission.MAPS_RECEIVE
com.whatsapp.permission.VOIP_CALL
android.permission.SET_WALLPAPER
android.permission.READ_OWNER_DATA
com.mobile.indiapp.permission.C2D_MESSAGE
android.permission.SEND_DOWNLOAD_COMPLETED_INTENTS
android.permission.READ_CALENDAR
android.permission.WRITE_CALENDAR
com.nemo.vidmate.permission.C2D_MESSAGE
android.permission.CHANGE_WIFI_MULTICAST_STATE
android.permission.NETWORK
android.permission.READ_USER_DICTIONARY
android.permission.WRITE_USER_DICTIONARY
com.koushikdutta.backup.permission.C2D_MESSAGE
android.permission.GET_PACKAGE_SIZE
com.twitter.android.permission.C2D_MESSAGE
com.twitter.android.permission.RESTRICTED
com.twitter.android.permission.AUTH_APP
com.twitter.android.permission.READ_DATA
com.twitter.android.permission.MAPS_RECEIVE
android.permission.RECEIVE_MMS
android.permission.RECEIVE_WAP_PUSH
android.permision.WRITE_EXTERNAL_STORAGE
android.permision.READ_EXTERNAL_STORAGE
android.permission.ACCESS_BLUETOOTH_SHARE
android.permission.CLEAR_APP_CACHE
android.permission.SYSTEM_OVERLAY_WINDOW
android.permission.ACCESS_DOWNLOAD_MANAGER
android.permission.ACCESS_WAKE_LOCK
android.intent.action.BOOT_COMPLETED
android.permission.ACCESS_MTK_MMHW
android.permission.DOWNLOAD_WITHOUT_NOTIFICATION
android.permission.CALL_PRIVILEGED
com.facebook.katana.provider.ACCESS
com.facebook.orca.provider.ACCESS
com.facebook.permission.prod.FB_APP_COMMUNICATION
com.facebook.orca.permission.CROSS_PROCESS_BROADCAST_MANAGER
android.permission.BATTERY_STATS
com.facebook.receiver.permission.ACCESS
com.facebook.home.permission.WRITE_BADGES
com.facebook.orca.permission.C2D_MESSAGE
com.nokia.pushnotifications.permission.RECEIVE
com.facebook.orca.permission.RECEIVE_ADM_MESSAGE
com.amazon.device.messaging.permission.RECEIVE
 ~/workspace/MalwareFeaturesCralwer/MalwareFeaturesCralwer   tesk2 ●  python3 all_permissions.py
  File "all_permissions.py", line 25

                          ^
SyntaxError: unexpected EOF while parsing
 ✘  ~/workspace/MalwareFeaturesCralwer/MalwareFeaturesCralwer   tesk2 ●  python3 all_permissions.py
android.permission.RECEIVE_BOOT_COMPLETED
android.permission.RECEIVE_SMS
android.permission.READ_SMS
android.permission.SEND_SMS
android.permission.READ_PHONE_STATE
android.permission.PROCESS_OUTGOING_CALLS
android.permission.ACCESS_NETWORK_STATE
android.permission.ACCESS_FINE_LOCATION
android.permission.INTERNET
android.permission.RECORD_AUDIO
android.permission.WRITE_EXTERNAL_STORAGE
android.permission.CAMERA
android.permission.CALL_PHONE
android.permission.READ_CONTACTS
android.permission.VIBRATE
android.permission.ACCESS_WIFI_STATE
com.android.launcher.permission.INSTALL_SHORTCUT
android.permission.ACCESS_COARSE_LOCATION
android.permission.CHANGE_WIFI_STATE
android.permission.WAKE_LOCK
android.permission.DISABLE_KEYGUARD
android.permission.SYSTEM_ALERT_WINDOW
android.permission.GET_TASKS
android.permission.READ_LOGS
android.permission.INSTALL_PACKAGES
com.android.launcher.permission.UNINSTALL_SHORTCUT
android.permission.READ_EXTERNAL_STORAGE
android.permission.WRITE_SMS
android.permission.WRITE_SETTINGS
com.android.vending.BILLING
android.permission.ACCESS_SUPERUSER
com.google.android.providers.gsf.permission.READ_GSERVICES
android.permission.PACKAGE_USAGE_STATS
com.android.browser.permission.READ_HISTORY_BOOKMARKS
android.permission.READ_CALL_LOG
android.permission.GET_ACCOUNTS
android.permission.EXPAND_STATUS_BAR
android.permission.MODIFY_AUDIO_SETTINGS
android.permission.RESTART_PACKAGES
android.permission.MOUNT_UNMOUNT_FILESYSTEMS
android.permission.ACCESS_LOCATION_EXTRA_COMMANDS
android.permission.WRITE_APN_SETTINGS
android.permission.CHANGE_NETWORK_STATE
android.permission.DEVICE_POWER
com.android.launcher.permission.READ_SETTINGS
android.permission.WRITE_CONTACTS
android.permission.BLUETOOTH
android.permission.ACCESS_COARSE_UPDATES
android.permission.PEORDER_TASKS
android.permission.BLUETOOTH_ADMIN
android.permission.KILL_BACKGROUND_PROCESSES
android.permission.DELETE_PACKAGES
android.permission.BROADCAST_STICKY
android.permission.MANAGE_ACCOUNTS
android.permission.AUTHENTICATE_ACCOUNTS
android.permission.REORDER_TASKS
com.your.domain.PAYMENT_BROADCAST_PERMISSION
android.permission.MODIFY_PHONE_STATE
android.permission.WRITE_SYNC_SETTINGS
android.permission.READ_SYNC_SETTINGS
android.permission.WRITE_SECURE_SETTINGS
com.android.vending.CHECK_LICENSE
com.android.launcher.permission.WRITE_SETTINGS
android.permission.WRITE_CALL_LOG
com.android.launcher2.permission.INSTALL_SHORTCUT
android.permission.KILL_BACKGROUND_PROCESSE
android.permission.FLASHLIGHT
android.permission.INSTALL_SHORTCUT
android.permission.READ_PROFILE
android.permission.READ_SYNC_STATS
android.permission.STORAGE
android.permission.USE_CREDENTIALS
com.google.android.c2dm.permission.RECEIVE
com.sec.android.provider.badge.permission.READ
com.sec.android.provider.badge.permission.WRITE
com.htc.launcher.permission.READ_SETTINGS
com.htc.launcher.permission.UPDATE_SHORTCUT
com.sonyericsson.home.permission.BROADCAST_BADGE
com.whatsapp.permission.BROADCAST
com.whatsapp.permission.C2D_MESSAGE
com.whatsapp.permission.MAPS_RECEIVE
com.whatsapp.permission.VOIP_CALL
android.permission.SET_WALLPAPER
android.permission.READ_OWNER_DATA
com.mobile.indiapp.permission.C2D_MESSAGE
android.permission.SEND_DOWNLOAD_COMPLETED_INTENTS
android.permission.READ_CALENDAR
android.permission.WRITE_CALENDAR
com.nemo.vidmate.permission.C2D_MESSAGE
android.permission.CHANGE_WIFI_MULTICAST_STATE
android.permission.NETWORK
android.permission.READ_USER_DICTIONARY
android.permission.WRITE_USER_DICTIONARY
com.koushikdutta.backup.permission.C2D_MESSAGE
android.permission.GET_PACKAGE_SIZE
com.twitter.android.permission.C2D_MESSAGE
com.twitter.android.permission.RESTRICTED
com.twitter.android.permission.AUTH_APP
com.twitter.android.permission.READ_DATA
com.twitter.android.permission.MAPS_RECEIVE
android.permission.RECEIVE_MMS
android.permission.RECEIVE_WAP_PUSH
android.permision.WRITE_EXTERNAL_STORAGE
android.permision.READ_EXTERNAL_STORAGE
android.permission.ACCESS_BLUETOOTH_SHARE
android.permission.CLEAR_APP_CACHE
android.permission.SYSTEM_OVERLAY_WINDOW
android.permission.ACCESS_DOWNLOAD_MANAGER
android.permission.ACCESS_WAKE_LOCK
android.intent.action.BOOT_COMPLETED
android.permission.ACCESS_MTK_MMHW
android.permission.DOWNLOAD_WITHOUT_NOTIFICATION
android.permission.CALL_PRIVILEGED
com.facebook.katana.provider.ACCESS
com.facebook.orca.provider.ACCESS
com.facebook.permission.prod.FB_APP_COMMUNICATION
com.facebook.orca.permission.CROSS_PROCESS_BROADCAST_MANAGER
android.permission.BATTERY_STATS
com.facebook.receiver.permission.ACCESS
com.facebook.home.permission.WRITE_BADGES
com.facebook.orca.permission.C2D_MESSAGE
com.nokia.pushnotifications.permission.RECEIVE
com.facebook.orca.permission.RECEIVE_ADM_MESSAGE
com.amazon.device.messaging.permission.RECEIVE
124